# delta-ffi

./: .gitignore  Cargo.toml  build.sh  cbindgen.toml
examples/: CMakeLists.txt  main.c
lib/: delta_ffi.dll.lib  delta_ffi.h  my_header.h
src/: lib.rs
